# ai4se-coding-agent-harness

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  ai4se-coding-agent-harness.md  pyproject.toml
.github/workflows/: test.yml
.superpowers/sdd/: progress.md  task-0.1-brief.md  task-0.1-diff.txt  task-0.1-log.txt  task-0.1-report.md  task-0.3-brief.md  task-0.3-report.md  task-1.1-brief.md  (+14 more)
config/: agent-harness.yaml  personal-harness.yaml
demo/: __init__.py  demo_feedback.py  demo_guardrail.py  demo_scope.py
docs/: codex_execution_handoff.revised.md  demo_walkthrough.md  final_status.md  personal_setup.md  static_html_spike.md
scripts/: __init__.py  secret_scan.py  verify_delivery.py  verify_web_ui.py
tests/: test_action_protocol.py  test_cli.py  test_cli_demo.py  test_cli_doctor.py  test_cli_hitl.py  test_cli_run.py  test_cli_smoke.py  test_cli_web.py  test_config.py  test_credentials.py  test_delivery_verify.py  test_demo.py  test_feedback.py  test_feedback_loop.py  test_governance_loop.py  test_hitl.py  test_hitl_resume.py  test_hitl_store.py  test_import.py  test_invalid_action_loop.py  test_llm.py  test_loop.py  test_loop_extended.py  test_models.py  test_openai_runtime_e2e.py  test_permission.py  test_plugins.py  test_project_memory.py  test_runtime_factory.py  test_runtime_tool_loop.py  test_scope.py  test_secret_scan.py  test_server_api.py  test_theater.py  test_tools.py  test_trace.py  test_trace_loop.py  test_verify_web_ui.py  test_web_demo_data.py  test_web_services.py
(+73 files in other folders)
